# GESTIONALEASD

./: .gitignore  README.md  data_manager.py  main.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted-UndefinedError-jinja2-exceptions-UndefinedError-None-has-no-attribute-strftime-Traceback-m-1739734242093.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-zip-is-undefined-Traceback-most-recent-call--1739733581849.txt
components/: bar.py  report.py
templates/: bar_prodotti.html  base.html  eventi.html  gestione_socio.html  impostazioni.html  index.html  partecipanti_list.html  pesca.html  profilo.html  quote.html  report_base.html  report_giornaliero.html  report_mensile.html  report_statistiche.html  report_unificato.html  soci.html  tariffe.html
